Fixed proper scrolling on the jump button

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,9 @@
 }
 
 /*Basic styles*/
+html {
+    scroll-behavior: smooth;
+}
 h1 {
     font-size: 3rem;
 }
@@ -100,6 +103,7 @@ p, a {
     .navbarLink {
         font-size: 1.2rem;
         margin: 0 0 0 1rem;
+        text-decoration: none;
     }
     #jumpDiv {
         top: 55.8px !important;
@@ -127,7 +131,7 @@ p, a {
     padding: 0 1.5rem;
 }
 #mainTop {
-    margin: 0 0 6rem 0;
+    margin: 0 0 4rem 0;
 }
 .text {
     margin: 1rem 0;
@@ -164,7 +168,7 @@ p, a {
 }
 /*Step Sections*/
 .stepSection {
-    padding: 1rem 0;
+    padding-top: 80px;
 }
 
 /*Footer styles*/
